fixes the alignment on the search button for four

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,11 +4,10 @@ footer {
 		background-color: white;
 		height: 60px;
 		width: 100%;
-		border-top: 1px #CCCCCC;
+		border-top: 1px solid #CCCCCC;
 		}
 
 #footertext {
-			display: flex; 
-			align-items: center; 
-			justify-content: center;
+			line-height: 60px;
+			text-align: center;
 			}
