--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,9 +2,9 @@ header {
 		background-image: url("../images/logo.png");
 		background-repeat: no-repeat;
 		background-position: left;
-		margin-left: 20px;
+		background-position-x: 20px;
 		height: 70px;
 		width: 100%;
 		background-color: white;
-		border-bottom: 1px #CCCCCC;
+		border-bottom: 1px solid #CCCCCC;
 		}
