--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -7,5 +7,6 @@ body {
 	}
 .container {
 	max-width: 1000px;
-	margin: 30px, none;
+	margin: 30px auto;
+	border: none;
 }
