--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,7 +2,7 @@
 	color: white;
 	height: 70px;
 	width: 100%;
-	border: 1px, #DDDDDD;
+	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 }
 
@@ -12,10 +12,13 @@
 	font-size: 18px;
 	height: 48px;
 	width: 20%;
-	display: inline-block;
 	border: none;
 	border-radius: 4px;
-	margin-top: 30px;
+	margin-top: 11px;
 	margin-right: 30px;
 	float: right;
+}
+
+#search:hover {
+	opacity: 0.9;
 }
